--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "hive-auth-wrapper": "^0.8.1",
     "lscache": "^1.3.0",
     "moment": "^2.29.0",
+    "node": "^21.0.0",
     "qr-code-styling": "^1.6.0-rc.1",
     "qrcode.vue": "^1.7.0",
     "quasar": "^1.15.20",
     "sanitize-html": "^2.3.0",
+    "simplemde": "^1.11.2",
+    "simplemde-w": "^1.11.4",
     "sjcl": "^1.0.8",
     "sscjs": "^0.0.8",
     "uuid": "^8.3.2",
