--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "qrcode.vue": "^1.7.0",
     "quasar": "^1.15.20",
     "sanitize-html": "^2.3.0",
+    "simplemde": "^1.11.2",
     "sjcl": "^1.0.8",
     "sscjs": "^0.0.8",
     "uuid": "^8.3.2",
